@@ -1,5 +1,5 @@
 /* Common code for file-based databases in nss_files module.
-   Copyright (C) 1996, 1997, 1998, 1999 Free Software Foundation, Inc.
+   Copyright (C) 1996, 1997, 1998, 1999, 2001 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -185,7 +185,7 @@ internal_getent (struct STRUCTURE *result,
   do
     {
       /* Terminate the line so that we can test for overflow.  */
-      data->linebuffer[linebuflen - 1] = '\xff';
+      ((unsigned char *) data->linebuffer)[linebuflen - 1] = '\xff';
 
       p = fgets_unlocked (data->linebuffer, linebuflen, stream);
       if (p == NULL)
@@ -195,7 +195,7 @@ internal_getent (struct STRUCTURE *result,
 	  H_ERRNO_SET (HOST_NOT_FOUND);
 	  return NSS_STATUS_NOTFOUND;
 	}
-      else if (data->linebuffer[linebuflen - 1] != '\xff')
+      else if (((unsigned char *) data->linebuffer)[linebuflen - 1] != 0xff)
 	{
 	  /* The line is too long.  Give the user the opportunity to
 	     enlarge the buffer.  */
